CCD-5367 add coverage tests